# TTTouchFix

./: CMakeLists.txt  LICENSE  License.txt  README.md  TTTouchFix.sln
TTTouchFix/: TTTouchFix.vcxproj  libMinHook.x64.lib  libMinHook.x86.lib  main.cpp
src/: main.cpp
